Updated tests
- Change previous integration test to be a unit test
- Created new integration test that exercises the
  DefaultBackendController.