@@ -61,6 +61,7 @@
 	<properties>
 		<ldp4j.version>1.0.0-SNAPSHOT</ldp4j.version>
 		<frontend.http.port>80</frontend.http.port>
+		<failsafe.arg.line>-Xmx1024m -XX:MaxPermSize=256m</failsafe.arg.line>
 	</properties>
 
 	<dependencyManagement>
@@ -235,6 +236,34 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-clean-plugin</artifactId>
+				<version>2.6.1</version>
+				<configuration>
+					<excludeDefaultDirectories>true</excludeDefaultDirectories>
+					<failOnError>false</failOnError>
+					<filesets>
+						<fileset>
+							<directory>${basedir}${file.separator}</directory>
+							<includes>
+								<include>.crawler${file.separator}</include>
+								<include>.crawler${file.separator}*</include>
+								<include>.crawler${file.separator}**${file.separator}*</include>
+							</includes>
+						</fileset>
+					</filesets>
+				</configuration>
+				<executions>
+					<execution>
+						<id>clean-local</id>
+						<phase>initialize</phase>
+						<goals>
+							<goal>clean</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>build-helper-maven-plugin</artifactId>
 				<executions>
@@ -255,12 +284,42 @@
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-failsafe-plugin</artifactId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<configuration>
+					<nonFilteredFileExtensions>
+						<nonFilteredFileExtension>zip</nonFilteredFileExtension>
+					</nonFilteredFileExtensions>
+				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>org.apache.maven.shared</groupId>
+						<artifactId>maven-filtering</artifactId>
+						<version>1.3</version>
+					</dependency>
+				</dependencies>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
 					<systemPropertyVariables>
 						<java.util.logging.config.file>${basedir}${file.separator}src${file.separator}test${file.separator}resources${file.separator}logging.properties</java.util.logging.config.file>
 						<maven.repo.local>${settings.localRepository}</maven.repo.local>
 						<ci.harvester.provider>TestingBackendController</ci.harvester.provider>
+						<ci.harvester.config>${basedir}${file.separator}src${file.separator}test${file.separator}resources${file.separator}config.yml</ci.harvester.config>
+					</systemPropertyVariables>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<configuration>
+					<systemPropertyVariables>
+						<java.util.logging.config.file>${basedir}${file.separator}src${file.separator}test${file.separator}resources${file.separator}logging.properties</java.util.logging.config.file>
+						<maven.repo.local>${settings.localRepository}</maven.repo.local>
+						<ci.harvester.provider>DefaultBackendController</ci.harvester.provider>
 						<ci.harvester.config>${basedir}${file.separator}src${file.separator}test${file.separator}resources${file.separator}config.yml</ci.harvester.config>
 					</systemPropertyVariables>
 				</configuration>
